# Modelo-de-Previsao-de-Cargos

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: sods.xlsx  sods_limpo.xlsx  sods_preparado.xlsx  sods_processado.xlsx
notebooks/: limpeza.ipynb  modelos.ipynb  preprocessamento.ipynb  sods.ipynb  sods_prep.ipynb
src/projeto_pd/: sods.ipynb  sods_limpo.xlsx
venv_novo/: pyvenv.cfg
venv_novo/Scripts/: activate  activate.bat
visualization/: data_clear.ipynb  limpeza.ipynb
